# Embedded-Space-AI-Framework

./: .gitignore  CMakeLists.txt  README.md  ReadMe.md  sftp-config.json
NoCompile/: task_CraterNav_2.cpp  task_PIDCtl_modWork.cpp  task_craterNav.cpp
data/: ImgTri_20240919_approach1.csv  ImgTri_20240919_cruise1.csv  ImgTri_20240919_cruise2.csv  ImgTri_20240919_cruise3.csv  ImgTri_20240919_cruise4.csv  ImgTri_20240924_approach1.csv  ImgTri_20240924_approach1_25.csv  ImgTri_20240924_approach1_35.csv  ImgTri_20240924_approach2.csv  ImgTri_20240924_approach3.csv  ImgTri_20240924_approach4.csv  ImgTri_20240924_cruise1.csv  ImgTri_20240924_cruise2.csv  ImgTri_20240924_cruise3.csv  ImgTri_20240924_cruise4.csv  crater15_match_20240822.csv  crater21_match_20240823.csv  crater26_match_20240823.csv  crater30_match_20240823.csv  crater34_match_20240823.csv  crater40_match_20240823.csv  crater45_match_20240823.csv  crater49_match_20240823.csv  crater_PCA_20240829.csv  libCrater_20240829.csv  libTri_20240919_approach1.csv  libTri_20240919_cruise1.csv  libTri_20240919_cruise2.csv  libTri_20240919_cruise3.csv  libTri_20240919_cruise4.csv  libTri_20240924_approach1.csv  libTri_20240924_approach1_25.csv  libTri_20240924_approach1_35.csv  libTri_20240924_approach2.csv  libTri_20240924_approach3.csv  libTri_20240924_approach4.csv  libTri_20240924_cruise1.csv  libTri_20240924_cruise2.csv  libTri_20240924_cruise3.csv  libTri_20240924_cruise4.csv
driver/: Makefile  gpioInt_platdrv.c  gpioInt_platdrv.ko  gpioled_platdrv.c  gpioled_platdrv.ko  timer_space.c  timer_space.ko
include/: common.hpp  csv2Eigen.hpp  proc.hpp  redundency.hpp  uart_com.hpp
(+28 files in other folders)
